# hackathon-band

./: .env.example  .gitignore  AGENTS.md  ALIBABA_CLOUD.md  ARCHITECTURE.md  Agent Skills MVP - 3-Minute Demo Video Script.md  Agent Skills MVP - Complete Workflow Automation.md  Agent Skills MVP - Hackathon Submission.md  Agent Skills MVP - Project Description.md  CMakeLists.txt  Complete Workflow for Agent Skills Framework.md  HACKATHON_REQUIREMENTS.md  Hackathon Submission Checklist.md  LICENSE  README.md  SUBMISSION.md  agent_config.yaml.example  backend.cpp  backend.h  band-design.md  core.py  diag_planner.py  legacy-package-notes.md  main.cpp  main.qml  pyproject.toml  ✅ Restoration Confirmation Report.md  🎯 COMPLETE MVP WORKFLOW DEMONSTRATION.md  🎯 MVP Workflow Execution Proof.md  🔍 Simulation Verification Report.md  🤖 Agent Skills MVP - Plan-Validate-Execute Framework.md
.kiro/specs/band-agent-display-contract/: .config.kiro  requirements.md
demo/: app.js  index.html  styles.css
demo/data/: failure-workflow.json  fix-planner-handoff.json  recorded-run.json  review-planner-handoff.json  success-workflow.json
docs/: BAND_INTEGRATION.md  CNAME  DEMO_VIDEO_CAPTIONS.md  FINAL_SUBMISSION_PACKET.md  OPUS_VIDEO_PACKET.md  REMOTE_AGENT_TEMPLATE.md  app.js  demo_captions.srt  opus_captions.srt  opus_video_prompt.txt  styles.css
docs/demo_run/: band_transcript.sample.json  proof_packet.sample.json
docs/submission/: DEPLOYMENT_CHECKLIST.md  FINAL_SUBMISSION_CHECKLIST.md  FINAL_SUBMISSION_PACKET.md  RECORDING_CHECKLIST.md  SUBMISSION_CONTENT.md  VIDEO_SCRIPT.md
docs/submission/slides/: proofgate-band-slides.html
proofgate/: __init__.py  agent_supervisor.py  api_server.py  band_adapter.py  band_human_client.py  chat_entry.py  chat_models.py  chat_server.py  config_writer.py  core.py  demo.py  launch.py  mirror.py  remote_agent.py  server.py  settings.py  workflow.py
tests/: test_api.py  test_chat_api.py  test_chat_entry.py  test_config.py  test_proofgate.py  test_workflow_contract.py
