[project]
name = "proofgate-band-demo"
version = "0.1.0"
description = "ProofGate for Band hackathon demo"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]
include = ["proofgate*"]

[project.optional-dependencies]
live-band = [
  "band-sdk[langgraph]",
  "langchain-openai",
  "langgraph",
  "python-dotenv",
]
