[project]
name = "proofgate-band-demo"
version = "0.1.0"
description = "ProofGate for Band hackathon demo"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

[project.scripts]
proofgate-demo = "proofgate.demo:main"
proofgate-band-api = "proofgate.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["proofgate*"]

[project.optional-dependencies]
live-band = [
  "band-sdk",
  "openai",
  "python-dotenv",
]
